footer font size fixes ->wrapping disabled

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -34,3 +34,6 @@
 .jb-fs-xl {
     font-size: 2.5em;
 }
+.jb-fs-xs {
+    font-size: 14px;
+}
